--- a/views/register.ejs
+++ b/views/register.ejs
@@ -14,6 +14,18 @@
                 <input type="email" class="form-control" name="email">
                 <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
             </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="batch" id="exampleRadios1" value="2020CED" checked>
+                <label class="form-check-label" for="exampleRadios1">
+                  2020 CED
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="radio" name="batch" id="exampleRadios1" value="2021COE">
+                <label class="form-check-label" for="exampleRadios1">
+                  2021 COE
+                </label>
+            </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" name="password">
