--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,19 +4,19 @@
         <div class="container-fluid">         
             <div class="row">
                 <div class="col-md-6 login-pic">
-                    <h3>Welcome to</h3>
-                    <h1>iAttendance App</h1>
+                    <span class="heading-span">Welcome to</span>
+                    <h1 class="heading">iAttendance App</h1>
                 </div>
-                <div class="col-md-6 login-detail">
+                <div class="col-md-6 login-detail text-white text-center">
                     <h1>Sign-In</h1>
                     <form class="mt-3" action="/login" method="POST">
-                        <a class="btn btn-lg btn-primary" href="/auth/google" role="button"><i class="fab fa-google"></i> Sign in with Google</a>
+                        <a class="btn btn-lg btn-original" href="/auth/google" role="button"><i class="fab fa-google"></i> Sign in with Google</a>
                         <p>Or Sign up with your Email</p>
                         <label class="form-label" for="username">Username</label>
-                        <input class="form-control" type="text" name="username">
+                        <input class="form-control mx-auto text-center" type="text" name="username">
                         <label class="form-label" for="password">Password</label>
-                        <input class="form-control" type="password" name="password">
-                        <button class="btn btn-primary mt-3 mb-5" type="submit">Login</button>
+                        <input class="form-control mx-auto text-center" type="password" name="password">
+                        <button class="btn btn-original mt-3 mb-5 btn-lg" type="submit">Login</button>
                     </form> 
                     <p>Don't have an account? Click below to register.</p>
                     <a href="/register"><button class="btn btn-secondary">Register</button></a>
