--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,6 +1,7 @@
 <%- include("partials/header"); -%>
 
-<div class="card register-detail">
+<div class="register-detail">
+  <div class="card">
     <div class="card-body">
       <h1>Register an account</h1>
         <form action="/register" method="POST">
@@ -30,11 +31,11 @@
                 <label for="password" class="form-label">Password</label>
                 <input type="password" class="form-control" name="password">
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-original">Submit</button>
         </form>
     
     </div>
 
   </div>
-
+</div>
 <%- include('partials/footer'); -%>
