--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -1,26 +1,39 @@
 <%- include("partials/header"); -%>
 
+<div class="container">
 <form action="/submit" method="POST">
     <div class="form-group col-md-4">
         <label for="inputState1">Choose your batch</label>
         <select id="inputState1" name="batch" class="form-control">
           <option selected value="2020CED">2020 CED</option>
-          <option value="2020CED">2021</option>
+          <option value="2020COE">2021 COE</option>
         </select>
       </div>
     <div class="form-group">
       <label for="formGroupExampleInput2">Course</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2"  name="course" placeholder="Enter your course">
+      <input type="text" class="form-control" id="formGroupExampleInput2"  name="course" placeholder="Enter your course"
+      <% if (details) { %>
+        value = "<%= details.course %>"
+        <% } else { %>
+        value = ""
+      <% } %>
+      >
     </div>
     <div class="form-group">
-        <label for="exampleInput3">Deadline</label>
-        <input type="number" class="form-control" id="exampleInput3" name="deadline" placeholder="Enter deadline by 24 Hours">
+        <label for="result">Deadline</label>
+        <div id="picker"> </div>
+        <input type="hidden" id="result" name="dd" value="">
     </div>
+    
     <div class="form-group">
         <label for="exampleInput4">Posted By</label>
-        <input type="text" class="form-control" id="exampleInput4" name="postedby" value="<%= user.username  %>">
+        <input type="text" class="form-control" id="exampleInput4" name="postedby" value="<%= user.username  %>" disabled>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
 </form>
+</div>
+
+
+
 
 <%- include('partials/footer'); -%>
