--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,14 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link href="css/datetimepicker.css" rel="stylesheet" type="text/css"/>
+
+    <!-- OpenGraph Data -->
+    <meta property="og:title" content="iAttendance-Smart Attendace Portal" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://obscure-scrubland-89750.herokuapp.com/" />
+    <meta property="og:image" content="images/favicon-32x32.png" />
+    <meta property="og:description" content="The portal for attendance management used by teachers and professors for a safe and secure attedance-making" />
+    <meta property="og:site_name" content="iAttendance" />
+
+
+    <!-- Favicon Links -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16.png">  
+    <link rel="manifest" href="/site.webmanifest">
+
+
+    <!-- Bootstrap and DateTimePicker CSS -->
+    <link href="/css/datetimepicker.css" rel="stylesheet" type="text/css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2&family=Zen+Dots&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/timepicker/1.3.5/jquery.timepicker.min.css">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
   
     <title>iAttendance</title>
 </head>
