--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,7 +1,7 @@
 <%- include("partials/header"); -%>
 
 <div class="register-detail">
-  <div class="card">
+  <div class="card register-body mx-auto">
     <div class="card-body">
       <h1>Register an account</h1>
         <form action="/register" method="POST">
