--- a/views/submit.ejs
+++ b/views/submit.ejs
@@ -1,39 +1,55 @@
 <%- include("partials/header"); -%>
 
-<div class="container">
-<form action="/submit" method="POST">
-    <div class="form-group col-md-4">
-        <label for="inputState1">Choose your batch</label>
-        <select id="inputState1" name="batch" class="form-control">
-          <option selected value="2020CED">2020 CED</option>
-          <option value="2020COE">2021 COE</option>
-        </select>
-      </div>
-    <div class="form-group">
-      <label for="formGroupExampleInput2">Course</label>
-      <input type="text" class="form-control" id="formGroupExampleInput2"  name="course" placeholder="Enter your course"
+<div class="container text-white"> 
+  <div class="card submit-card">
+    <div class="card shadow subhead-card">
       <% if (details) { %>
-        value = "<%= details.course %>"
-        <% } else { %>
-        value = ""
+        Edit Attendance
+      <% } else { %>
+        Enter new Attendance
       <% } %>
-      >
     </div>
-    <div class="form-group">
-        <label for="result">Deadline</label>
-        <div id="picker"> </div>
-        <input type="hidden" id="result" name="dd" value="">
-    </div>
-    
-    <div class="form-group">
-        <label for="exampleInput4">Posted By</label>
-        <input type="text" class="form-control" id="exampleInput4" name="postedby" value="<%= user.username  %>" disabled>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  <form 
+      <% if (details) { %>
+        action="/edit/<%= details._id %> "
+      <% } else { %>   
+        action="/submit"
+      <% } %>
+      method="POST">
+      <div class="form-group col-md-4">
+          <label for="inputState1">Choose your batch</label>
+          <select id="inputState1" name="batch" class="form-control">
+            <option selected value="2020CED">2020 CED</option>
+            <option value="2020COE">2021 COE</option>
+          </select>
+        </div>
+      <div class="form-group">
+        <label for="formGroupExampleInput2">Course</label>
+        <input type="text" class="form-control" id="formGroupExampleInput2"  name="course" placeholder="Enter your course"
+        <% if (details) { %>
+          value = "<%= details.course %>"
+          <% } else { %>
+          value = ""
+        <% } %>
+        required>
+      </div>
+      <div class="form-group">
+          <label for="result">Deadline</label>
+          <div id="picker"></div>
+          <input type="hidden" id="result" name="dd" value="" required>
+      </div>
+      
+      <div class="form-group">
+          <label for="exampleInput4">Posted By</label>
+          <input type="text" class="form-control" id="exampleInput4" name="postedby" value="<%= user.username  %>" disabled>
+      </div>
+      <% if (details) { %>
+        <button type="submit" class="btn btn-original">Save Changes</button>
+      <% } else { %>
+        <button type="submit" class="btn btn-original">Submit</button>
+      <% } %>
+  </form>
+  </div>  
 </div>
-
-
-
 
 <%- include('partials/footer'); -%>
